Alterado mecanismo de idioma para ptBR
Ativado suporte ao encoding UTF-8

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,8 @@
     
     <!-- Permite gerar o relatório Story Navigator -->
     <jbehave.navigator.version>3.6.6</jbehave.navigator.version>
-  </properties>
+ 	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+   </properties>
 
   <dependencies>
     <dependency>
