--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,21 @@
   <version>1.0-SNAPSHOT</version>
   <name>JBehave Stories</name>
 
+  <description>
+ 	Projeto gerado/adaptado a partir do jbehave-simple-archetype.
+ 	Este projeto foi apresentado no evento TDC2013 realizado em Porto Alegre
+    para a palestra "Execução de testes em paralelo com JBehave e Selenium Grid".
+   </description>
+   
+   <developers>
+   	<developer>
+   		<name>Marcelo Tocchetto</name>
+   		<email>marcelo.tocchetto@neogrid.com</email>
+  		<organization>NeoGrid</organization>
+   		<url>http://www.neogrid.com</url>
+    </developer>
+   </developers>
+
   <properties>
     <jbehave.core.version>3.7.4</jbehave.core.version>
     <jbehave.site.version>3.1.1</jbehave.site.version>
